--- a/index.html
+++ b/index.html
@@ -148,14 +148,14 @@
     <!-- नोटपैड कैलकुलेटर -->
     <div class="tool-card" style="text-align:center">
       <p>नोटपेड कैलकुलेटर</p>
-      <a href="#"><img src="https://via.placeholder.com/500x300.png?text=Notepad+Billing" alt="Notepad Billing Tool" style="max-width:100%; border-radius:10px;"></a>
+      <a href="#"><img src="notepad.jpgg?text=Notepad+Billing" alt="Notepad Billing Tool" style="max-width:100%; border-radius:10px;"></a>
       <a class="button" href="#">➕ अभी बिल बनाना शुरू करें</a>
     </div>
 
     <!-- कीपैड बिल टेबल -->
     <div class="tool-card" style="text-align:center">
       <p>किपैड बिल टेबल</p>
-      <a href="#"><img src="https://via.placeholder.com/500x300.png?text=Keypad+Billing" alt="Keypad Billing Tool" style="max-width:100%; border-radius:10px;"></a>
+      <a href="#"><img src="keypad.png?text=Keypad+Billing" alt="Keypad Billing Tool" style="max-width:100%; border-radius:10px;"></a>
       <a class="button" href="#">➕ अभी बिल बनाना शुरू करें</a>
     </div>
 
@@ -184,6 +184,25 @@
     <a href="privacy.html">Privacy Policy</a> | 
     <a href="contact.html">Contact Us</a>
   </div>
-
+<script>
+        // Register service worker
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('service-worker.js')
+                    .then((registration) => {
+                        console.log('SW registered: ', registration);
+                    })
+                    .catch((registrationError) => {
+                        console.log('SW registration failed: ', registrationError);
+                    });
+            });
+        }
+        
+        // Prevent default install prompt
+        window.addEventListener('beforeinstallprompt', (e) => {
+            e.preventDefault();
+            console.log('PWA installation available');
+        });
+</script>
 </body>
 </html>
