--- a/index.html
+++ b/index.html
@@ -148,14 +148,14 @@
     <!-- नोटपैड कैलकुलेटर -->
     <div class="tool-card" style="text-align:center">
       <p>नोटपेड कैलकुलेटर</p>
-      <a href="#"><img src="notepad.jpgg?text=Notepad+Billing" alt="Notepad Billing Tool" style="max-width:100%; border-radius:10px;"></a>
+      <a href="#"><img src="notepad.png?text=Notepad+Billing" alt="Notepad Billing Tool" style="max-width:100%; border-radius:10px;"></a>
       <a class="button" href="#">➕ अभी बिल बनाना शुरू करें</a>
     </div>
 
     <!-- कीपैड बिल टेबल -->
     <div class="tool-card" style="text-align:center">
       <p>किपैड बिल टेबल</p>
-      <a href="#"><img src="keypad.png?text=Keypad+Billing" alt="Keypad Billing Tool" style="max-width:100%; border-radius:10px;"></a>
+      <a href="#"><img src="keypad.jpg?text=Keypad+Billing" alt="Keypad Billing Tool" style="max-width:100%; border-radius:10px;"></a>
       <a class="button" href="#">➕ अभी बिल बनाना शुरू करें</a>
     </div>
 
