--- a/index.html
+++ b/index.html
@@ -156,9 +156,12 @@
     <div class="tool-card" style="text-align:center">
       <p>किपैड बिल टेबल</p>
       <a href="#"><img src="keypad.jpg?text=Keypad+Billing" alt="Keypad Billing Tool" style="max-width:100%; border-radius:10px;"></a>
-      <a class="button" href="keypad.html">➕ अभी बिल बनाना शुरू करें</a>
+      <a class="button" onclick="location.href='keypad.html'">➕ अभी बिल बनाना शुरू करें</a>
     </div>
-
+    <!--
+<button onclick="location.href='simplecalculation.html'">
+  Open Simple Calculator
+</button>-->
     <!-- सेव और प्रिंट -->
     <div class="tool-card">
       <h2>🖨️ बिल को सेव और प्रिंट कैसे करें?</h2>
