--- a/index.html
+++ b/index.html
@@ -149,14 +149,14 @@
     <div class="tool-card" style="text-align:center">
       <p>नोटपेड कैलकुलेटर</p>
       <a href="#"><img src="notepad.png?text=Notepad+Billing" alt="Notepad Billing Tool" style="max-width:100%; border-radius:10px;"></a>
-      <a class="button" href="notepad.html">➕ अभी बिल बनाना शुरू करें</a>
+      <a class="button" onclick="location.href='notepad.html'">➕ अभी बिल बनाना शुरू करें</a>
     </div>
 
     <!-- कीपैड बिल टेबल -->
     <div class="tool-card" style="text-align:center">
       <p>किपैड बिल टेबल</p>
       <a href="#"><img src="keypad.jpg?text=Keypad+Billing" alt="Keypad Billing Tool" style="max-width:100%; border-radius:10px;"></a>
-      <a class="button" onclick="location.href='keypad.html'">➕ अभी बिल बनाना शुरू करें</a>
+      <button onclick="location.href='keypad.html'">➕ अभी बिल बनाना शुरू करें</button>
     </div>
     <!--
 <button onclick="location.href='simplecalculation.html'">
