--- a/index.html
+++ b/index.html
@@ -149,7 +149,9 @@
     <div class="tool-card" style="text-align:center">
       <p>नोटपेड कैलकुलेटर</p>
       <a href="#"><img src="notepad.png?text=Notepad+Billing" alt="Notepad Billing Tool" style="max-width:100%; border-radius:10px;"></a>
-      <a href="notepad.html">➕ अभी बिल बनाना शुरू करें</a>
+      <!--<a href="notepad.html">➕ अभी बिल बनाना शुरू करें</a>-->
+      <button onclick="location.href='notepad.html'">➕ अभी बिल बनाना शुरू करें</button>
+    
     </div>
 
     <!-- कीपैड बिल टेबल -->
