--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@
     <!-- नोटपैड कैलकुलेटर -->
     <div class="tool-card" style="text-align:center">
       <p>नोटपेड कैलकुलेटर</p>
-      <a href="#"><img src="notepad.png?text=Notepad+Billing" alt="Notepad Billing Tool" style="max-width:100%; border-radius:10px;"></a>
+     <!-- <a href="#"><img src="notepad.png?text=Notepad+Billing" alt="Notepad Billing Tool" style="max-width:100%; border-radius:10px;"></a>-->
+      <a href="#"><img src="notepad.png" alt="Notepad Billing Tool" style="max-width:100%; border-radius:10px;"></a>
       <!--<a href="notepad.html">➕ अभी बिल बनाना शुरू करें</a>-->
       <button onclick="location.href='notepad.html'">➕ अभी बिल बनाना शुरू करें</button>
     
